--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Pram in The Hall | A charity supporting artists who are parents through donations.</title>
+    <title>Austin Attachment Experts | Healing through relationships.</title>
     <meta name="description" content="Pram in the Hall awards grants to aspiring artists and writers who need help with childcare in order to follow their creative pursuits.  We are currently accepting applications for our first cohort in 2017."/>
 
     <!-- Reset CSS file -->
@@ -47,32 +47,79 @@
 
 <body>
 
+  <!-- Navigation -->
+  <nav class="navbar navbar-fixed-top" role="navigation">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+              <a class="navbar-brand" href="index.html">Logo</a>
+          </div>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav navbar-right">
+                  <li>
+                      <a href="about.html">Home</a>
+                  </li>
+                  <li>
+                      <a href="services.html">Services</a>
+                  </li>
+                  <li>
+                      <a href="contact.html">Blog</a>
+                  </li>
+                  <li>
+                      <a href="contact.html">About</a>
+                  </li>
+                  <li>
+                      <button><a href="contact.html">Schedule a Session</a></button>
+                  </li>
+
+
+              </ul>
+          </div>
+          <!-- /.navbar-collapse -->
+  </nav>
+
  <div id="wrapper">
 
+
+
    <div id="header">
+
 
    </div>
 
    <div id="content">
 
-     <div class="container">
-       <div class="text-box">
-      <section class="logo">
+     <div class="landing">
+      <section class>
 
-          <div class="row text-center">
-            <img class="logo-main"src="img/logos/LogoBusiness_HI-RES.png" alt="Pram in the Hall logo">
-          </div>
+          <!-- <div class="row">
+            <img class= fill src="img/homeBanner.jpg" alt="couple holding hands">
+          </div> -->
+
+          <p class="center">
+            <a class="btn-pram btn" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+              Schedule a Session
+            </a>
+          </p>
+
 
       </section>
+    </div>
 
       <section class="description">
 
-        <!-- <div class="container text-box"> -->
+        <div class="container text-box">
 
           <p class="description-text">The British writer Cyril Connolly famously said,</p>
 
           <div class="row cyril-section text-center">
-              <img class="cyril" src="img/cyrilConnollyCrop.jpg" alt="Cyril Connolly">
+              <img class="cyril" src="img/avatar.png" alt="Cyril Connolly">
           </div>
           <div class="row cyril-section">
               <p id="cyril-quote">"There is no more somber enemy of good art than the pram in the hall."</p>
@@ -88,13 +135,7 @@
 
       </section>
 
-<section class="apply">
-
-          <p>
-            <a class="btn-pram btn" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-              Apply to Pram in the Hall
-            </a>
-          </p>
+<section class="center">
 
     <div class="collapse" id="collapseExample">
 
@@ -208,7 +249,7 @@
 
           <div class="col-lg-2">
             <div class="board-member">
-                <img class="profile-pic" src="img/justine-musk-crop.jpg" alt="board member profile picture">
+                <img class="profile-pic" src="img/avatar.png" alt="board member profile picture">
               <div class="member-details">
               <!-- put formattting for a border-bottom and any text formatting inside the h5 class -->
                 <hr class="board-member-border"/><h4 class="board-member-name">Justine Musk</h4>
@@ -223,7 +264,7 @@ Justine Musk is the author of the contemporary fantasy novel BloodAngel, publish
 
           <div class="col-lg-2">
             <div class="board-member">
-                <img class="profile-pic" src="img/austin-kleon-crop.jpg" alt="board member profile picture">
+                <img class="profile-pic" src="img/avatar.png" alt="board member profile picture">
               <div class="member-details">
               <!-- put formattting for a border-bottom and any text formatting inside the h5 class -->
                 <hr class="board-member-border"/><h4 class="board-member-name">Austin Kleon</h4>
@@ -238,70 +279,13 @@ Austin Kleon is the New York Times bestselling author of three illustrated books
 
         </div>
 
-        <div class="row">
-
-          <div class="col-lg-2">
-            <div class="board-member">
-                <img class="profile-pic" src="img/robert-kurson-crop.jpg" alt="board member profile picture">
-              <div class="member-details">
-              <!-- put formattting for a border-bottom and any text formatting inside the h5 class -->
-                <hr class="board-member-border"/><h4 class="board-member-name">Robert Kurson</h4>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4">
-            <p class="bio-text">
-              Robert Kurson is an American author, best known for his 2004 bestselling book, Shadow Divers, the true story of two Americans who discover a World War II German U-boat sunk 60 miles off the coast of New Jersey. His stories have appeared in Rolling Stone, The New York Times Magazine, and other publications. He lives in Chicago.</p>
-          </div>
-
-          <div class="col-lg-2">
-            <div class="board-member">
-                <img class="profile-pic" src="img/kwan-crop.jpg" alt="board member profile picture">
-              <div class="member-details">
-              <!-- put formattting for a border-bottom and any text formatting inside the h5 class -->
-                <hr class="board-member-border"/><h4 class="board-member-name">K'wan</h4>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4">
-            <p class="bio-text">
-K’wan is the #1 bestselling author of Welfare Wifeys, Section 8, Gutter, Still Hood, Hood Rat, Eve, Hoodlum, Street Dreams, Gangsta, Road Dawgz and now Animal. Animal was chosen as one of the five Best Books of 2012 and the starred pick of the month for October on Library Journal. K’wan has also been featured in Time, King, The New York Press, and on MTV and BET. K’wan currently resides in New Jersey where he is working on his next novel.</p>
-          </div>
-
-        </div>
-
-        <div class="row">
-
-          <div class="col-lg-2">
-            <div class="board-member">
-                <img class="profile-pic" src="img/ryan-holiday-crop.jpg" alt="board member profile picture">
-              <div class="member-details">
-              <!-- put formattting for a border-bottom and any text formatting inside the h5 class -->
-                <hr class="board-member-border"/><h4 class="board-member-name">Ryan Holiday</h4>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4">
-            <p class="bio-text">
-              Ryan Holiday is the bestselling author of Trust Me I’m Lying, The Obstacle Is The Way, Ego Is The Enemy, and The Daily Stoic. His company, Brass Check, has advised clients like Google, TASER, and Complex, as well as many prominent bestselling authors. Holiday is a media columnist for The New York Observer, and his other writings—published in 19 languages—appear in Forbes, The Huffington Post, Fast Company, Thought Catalog, and The Columbia Journalism Review, among others. </p>
-          </div>
-
-        </div>
-
-      <!-- </div> -->
+      </div>
 
       </section>
 
-
-  </div>
-
     <div id="footer">
-      <a class="btn-pram btn footer" href="mailto:praminthehall@gmail.com">Contact</a>
+      <a class="btn-pram btn footer" href="mailto:sandramkillebrew@gmail.com">Schedule a Session</a>
     </div>
-  </div>
   </div>
 
 
